Added an enemy object and created a function to move them. Program currently only spawns one enemy and does not check for collision.

--- a/330project2.html
+++ b/330project2.html
@@ -27,7 +27,7 @@
 		#audioControls{display: none;}
 		
 	</style>
-	<title>Boomshine</title>
+	<title>Knockoffaruga!</title>
 </head>
 <body>
 	<canvas>
